Updated build script