@@ -122,6 +122,8 @@ tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
 }
 
+bootRun.jvmArgs(['--enable-preview'])
+
 task buildApp(type: GradleBuild) {
     tasks = ['clean', 'bootJar']
 }
